VR Teleport - Improvements

--- a/html/webxr_VR_DraggingInfo.html
+++ b/html/webxr_VR_DraggingInfo.html
@@ -11,19 +11,19 @@
 		<h1>Dragging in VR (WebXR)</h1>
 		<br>
 		<hr>
-		<p>This example explores the dragging feature in a WebXR environment. 
-		   It was tested with a basic HMD that has an action button to interact.</p>
+		<p>This example explores the dragging feature in a WebXR environment.</p>
 
 		<p>The example is best suited for use with mobile devices. 
 		   After clicking on the "Open Example" button below, press the "Enter VR" button. 
 		   This button is only available if your mobile device is ready for WebXR.
-		   You will have a better experience when using a HMD (Google Cardboard or similar) with an action button.</p>
+		   You will have a better experience when using an HMD (Google Cardboard or similar) that has a button, 
+		   or a joystick that simulates this behavior (a screen touch).</p>
 
 		<button type="button" onclick="window.open('../src/webxr_VR_Drag.html','_blank')">Open Example</button>
 
 		<p>Note: To test this example on a computer you have to install the 
 			<a href="https://chrome.google.com/webstore/detail/webxr-api-emulator/mjddjgeghkdijejnciaefnkjmkafnnje" target="_blank">
-			WebXR API Emulator</a> extension and select "Google Cardboard" or another HMD.</p>
+			WebXR API Emulator</a> extension and select a HMD that has a joystick.</p>
 
 		<p>Further information about webxr can be found 
 			<a href="https://developer.mozilla.org/en-US/docs/Web/API/WebXR_Device_API" target="_blank">here</a>.
