--- a/html/webxr_VR_TeleportInfo.html
+++ b/html/webxr_VR_TeleportInfo.html
@@ -8,21 +8,25 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>VR Panorama (WebXR)</h1>
+		<h1>VR Teleport (WebXR)</h1>
 		<br>
 		<hr>
-		<p>This example explores a teleport function in a WebXR environment (UNDER DEVELOPMENT).</p>
+		<p>This example explores a teleport function in a WebXR environment.
+		   When you press the button of your VR HMD you will see a rectile. 
+		   It turns from white to orange when you are over an area in which you can be teleported. 
+		</p>
 
-		<!--p>The example is best suited for use with mobile devices. 
+		<p>	The example is best suited for use with mobile devices. 
 			After clicking on the "Open Example" button below, press the "Enter VR" button. 
 			This button is only available if your mobile device is ready for WebXR.
-		    You will have a better experience when using a HMD (Google Cardboard or similar).</p-->
+		    You will have a better experience when using an HMD (Google Cardboard or similar) that has a button, 
+			or a joystick that simulates this behavior (a screen touch).</p>
 
 		<button type="button" onclick="window.open('../src/webxr_VR_Teleport.html','_blank')">Open Example</button>
 
 		<p>Note: To test this example on a computer you have to install the 
 			<a href="https://chrome.google.com/webstore/detail/webxr-api-emulator/mjddjgeghkdijejnciaefnkjmkafnnje" target="_blank">
-			WebXR API Emulator</a> extension and select "Google Cardboard" or another HMD.</p>
+			WebXR API Emulator</a> extension and select a HMD that has a joystick.</p>
 
 		<p>Further information about webxr can be found 
 			<a href="https://developer.mozilla.org/en-US/docs/Web/API/WebXR_Device_API" target="_blank">here</a>.
