Webxr freeMove example added

--- a/html/webxr_VR_FreeMoveInfo.html
+++ b/html/webxr_VR_FreeMoveInfo.html
@@ -11,8 +11,8 @@
 		<h1>VR Free Move (WebXR)</h1>
 		<br>
 		<hr>
-		<p>This example allows the user to freely over a WebXR scene.
-		   When you press the button of your VR HMD move in the direction you are looking at. 
+		<p>This example allows the user to freely move over a WebXR scene.
+		   When you press the button of your VR HMD, the camera will move in the direction you are looking at. 
 		</p>
 
 		<p>	The example is best suited for use with mobile devices. 
