touch movement in external models code

--- a/src/VR_ExternalModel.html
+++ b/src/VR_ExternalModel.html
@@ -20,7 +20,9 @@
           <a-entity camera position="0 1.6 0" look-controls="pointerLockEnabled: true"></a-entity>
       </a-entity> -->
 
-      <a-entity camera look-controls wasd-controls="acceleration:100" position="0 1.6 0"></a-entity>
+      <!-- <a-entity camera look-controls wasd-controls="acceleration:100"></a-entity> -->
+
+      <a-entity camera universal-controls position="0 1.6 0"></a-entity>
 
       <a-entity light="type: directional; color: #ffffff; intensity: 0.5" position="0 1 0"></a-entity>
       <a-entity light="type: point; color: #ffffff; intensity: 1.0" position="0 3 4"></a-entity>
