touch movement in external models code

--- a/src/VR_ExternalModel.html
+++ b/src/VR_ExternalModel.html
@@ -37,11 +37,11 @@
       <a-sky color="#2e2d2b"></a-sky>
 
       <!-- objects ---------------->
-      <!-- <a-sphere position="0 4 -6" radius=".2" color="#FFFFFF"></a-sphere>
+      <a-sphere position="0 4 -6" radius=".2" color="#FFFFAA"></a-sphere>
       <a-cylinder
         height="4" radius=".1" color="#4CC3D9"
         position="0 2 -6" rotation="0 -20 0">
-      </a-cylinder> -->
+      </a-cylinder>
 
       <a-entity position="0 0 -6" animation="property: rotation; to: 0 360 0; dur: 15000; loop: true; easing: linear">
         <a-entity
