--- a/src/VR_ExternalModel.html
+++ b/src/VR_ExternalModel.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="shortcut icon" href="../favicon.ico">
     <script src="../libs/aframe/aframe.min.js"></script>
-    <script src="../libs/aframe/aframe-extras.min.js"></script>
+    <script src="../libs/aframe/aframe-extras.min.js"></script> 
   </head>
   <body>
     <a-scene>
@@ -16,13 +16,9 @@
       <!-- Details about aframe-extras "controls" here:
            https://github.com/donmccurdy/aframe-extras/tree/master/src/controls
       -->
-      <!-- <a-entity id="rig" movement-controls position="0 0 0">
-          <a-entity camera position="0 1.6 0" look-controls="pointerLockEnabled: true"></a-entity>
-      </a-entity> -->
-
-      <!-- <a-entity camera look-controls wasd-controls="acceleration:100"></a-entity> -->
-
-      <a-entity camera universal-controls position="0 1.6 0"></a-entity>
+      <a-entity id="rig" movement-controls position="0 0 0">
+          <a-entity camera position="0 1.6 0" look-controls="controls: touch; pointerLockEnabled: true"></a-entity>
+      </a-entity>
 
       <a-entity light="type: directional; color: #ffffff; intensity: 0.5" position="0 1 0"></a-entity>
       <a-entity light="type: point; color: #ffffff; intensity: 1.0" position="0 3 4"></a-entity>
@@ -37,7 +33,7 @@
       <a-sky color="#2e2d2b"></a-sky>
 
       <!-- objects ---------------->
-      <a-sphere position="0 4 -6" radius=".2" color="#FFFFAA"></a-sphere>
+      <a-sphere position="0 4 -6" radius=".2" color="#FFFFFF"></a-sphere>
       <a-cylinder
         height="4" radius=".1" color="#4CC3D9"
         position="0 2 -6" rotation="0 -20 0">
