--- a/src/VR_ExternalModel.html
+++ b/src/VR_ExternalModel.html
@@ -17,7 +17,7 @@
            https://github.com/donmccurdy/aframe-extras/tree/master/src/controls
       -->
       <a-entity id="rig" movement-controls position="0 0 0">
-          <a-entity camera position="0 1.6 0" look-controls="controls: touch; pointerLockEnabled: true"></a-entity>
+          <a-entity camera position="0 1.6 0" look-controls="pointerLockEnabled: true"></a-entity>          
       </a-entity>
 
       <a-entity light="type: directional; color: #ffffff; intensity: 0.5" position="0 1 0"></a-entity>
