Shadow maps example added

--- a/html/exampleShadowMapAutoUpdateInfo.html
+++ b/html/exampleShadowMapAutoUpdateInfo.html
@@ -13,7 +13,9 @@
 		<hr>
 
 		<p>
-			In this example, you can see the impact on the application's performance by turning off the update of the shadow map at each frame. This option is especially interesting in applications where shadows don't need to be updated at runtime.
+			In this example, you can see the impact on the application's performance by turning off the auto update 
+			parameter of the renderer, regarding the shadow map. This option is especially interesting in applications where shadows 
+			don't need to be updated at runtime. Check the FPS counter to spot the difference.
 		</p>
 
 		<iframe src="../src/exampleShadowMapAutoUpdate.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
