Shadow maps example added

--- a/src/exampleShadowUpdate.html
+++ b/src/exampleShadowUpdate.html
@@ -10,7 +10,7 @@
 <body>
   <div id="container"></div>  
   <div id="webgl-output">
-    <script type="module" src="exampleShadowMapAutoUpdate.js"></script>
+    <script type="module" src="exampleShadowUpdate.js"></script>
   </div>
 </body>
 </html>
