--- a/html/exampleShadowUpdateInfo.html
+++ b/html/exampleShadowUpdateInfo.html
@@ -20,7 +20,8 @@
 
 		<p>
 			This example also presents a secondary directional light to be used with dynamic objects. 
-			This light can have a smaller area of influence to reduce computational consumption.
+			This light can project shadows in a smaller area of influence to reduce computational consumption.
+			As we create two lights, the intensity of each light is cut by half (i.e., 0.5 for each light).
 		</p>		
 
 		<iframe src="../src/exampleShadowUpdate.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
