--- a/src/webxr_VR_Drag.html
+++ b/src/webxr_VR_Drag.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>VR Teleport (WebXR)</title>
+    <title>VR Drag (WebXR)</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
