--- a/src/exampleShadowMapTypes.html
+++ b/src/exampleShadowMapTypes.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="webgl-output">
-    <script type="module" src="shadowMapTypes.js"></script>
+    <script type="module" src="exampleShadowMapTypes.js"></script>
   </div>
 </body>
 </html>
