Add Shadow examples on the main part

--- a/src/shadowMapViewer.html
+++ b/src/shadowMapViewer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shadow Map's Types</title>
+    <title>Shadow Maps</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -9,7 +9,7 @@
 
 <body>
   <div id="webgl-output">
-    <script type="module" src="exampleShadowMapTypes.js"></script>
+    <script type="module" src="shadowMapViewer.js"></script>
   </div>
 </body>
 </html>
