--- a/html/shadowMapTypesInfo.html
+++ b/html/shadowMapTypesInfo.html
@@ -24,8 +24,8 @@
 			• VSM - filters shadow maps using the Variance Shadow Map (VSM) algorithm. When using VSMShadowMap all shadow receivers will also cast shadows.
 		</p>		
 
-		<iframe src="../src/exampleShadowMapTypes.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
-		<a href="../src/exampleShadowMapTypes.html" target="_blank">Open in a new tab</a>
+		<iframe src="../src/shadowMapTypes.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
+		<a href="../src/shadowMapTypes.html" target="_blank">Open in a new tab</a>
 
 	</body>
 </html>
