--- a/html/shadowUpdateInfo.html
+++ b/html/shadowUpdateInfo.html
@@ -24,8 +24,8 @@
 			As we create two lights, the intensity of each light is cut by half (i.e., 0.5 for each light).
 		</p>		
 
-		<iframe src="../src/exampleShadowUpdate.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
-		<a href="../src/exampleShadowUpdate.html" target="_blank">Open in a new tab</a>
+		<iframe src="../src/shadowUpdate.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
+		<a href="../src/shadowUpdate.html" target="_blank">Open in a new tab</a>
 
 	</body>
 </html>
