--- a/src/shadowMapTypes.html
+++ b/src/shadowMapTypes.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shadow Map Auto Update</title>
+    <title>Shadow Map's Types</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 
 <body>
-  <div id="container"></div>  
   <div id="webgl-output">
-    <script type="module" src="exampleShadowUpdate.js"></script>
+    <script type="module" src="shadowMapTypes.js"></script>
   </div>
 </body>
 </html>
