Adding Joystick examples

--- a/src/exampleJoystick.html
+++ b/src/exampleJoystick.html
@@ -45,22 +45,13 @@
       z-index: 12;
       touch-action: manipulation;
     }
-    /* .noSelect {
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      -webkit-tap-highlight-color: transparent;
-    } */
   </style>
 
 </head>
 
 <body>
   <div id="webgl-output"></div>
-  <div id="mobileInterface" class="noSelect">
+  <div id="mobileInterface" >
     <div id="joystickWrapper1"></div>
     <div id="joystickWrapper2"></div>
   </div>  
