Adding Joystick examples

--- a/src/test.html
+++ b/src/test.html
@@ -49,7 +49,7 @@
   <div id="webgl-output">
     <script src="../libs/other/ammo.wasm.js"></script>      
     <script src="../libs/other/nipplejs.js"></script>    
-    <script type="module" src="ammoVehicle2.js"></script>
+    <script type="module" src="test.js"></script>
   </div>
 </body>
 </html>
