Adding Joystick examples

--- a/html/exampleJoystickInfo.html
+++ b/html/exampleJoystickInfo.html
@@ -8,7 +8,7 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Joystick Example</h1>
+		<h1>Virtual Joystick Example</h1>
 		<br>
 		<hr>
 
