Adding physics examples

--- a/html/ammoBreakableObjectsInfo.html
+++ b/html/ammoBreakableObjectsInfo.html
@@ -16,7 +16,7 @@
 		direct port of the <a href="http://bulletphysics.org/" target="_blank">Bullet physics engine</a>.
 		You can find the basic API documentation of the Bullet engine <a href="https://pybullet.org/Bullet/BulletFull/index.html" target="_blank">here</a>.</p>
 
-		<p>This example explores the <i>ConvexObjectBreaker class</i>, that can be used to subdivide a convex Geometry object into pieces.
+		<p>This example explores the <i>ConvexObjectBreaker</i> class, that can be used to subdivide a convex Geometry object into pieces.
 		</p>	
 
 		<iframe src="../src/ammoBreakableObjects.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
