--- a/src/buttons.html
+++ b/src/buttons.html
@@ -24,7 +24,7 @@
 
 <body>
   <div style="width:100%;height:50px;text-align: center; color:white;" class="ui">Info header</div>
-  <button style="top:0" id="fire" class="ui">Fire</button>
+  <button style="top:0" id="fire" class="ui">Touch</button>
   <button style="bottom:0" id="spell" class="ui">Spell</button>
   <button style="right:0" id="health" class="ui">Health</button>
   <div id="webgl-output">
