--- a/src/buttons.html
+++ b/src/buttons.html
@@ -10,9 +10,8 @@
       body {
         background-color: black;
         font-size: 5pt;
-
       }
-      .video-game-button {
+      .video-game-button {       
         text-shadow: 1px 1px pink, -1px -1px maroon;
         line-height: 5em;
         width: 5em;
@@ -24,17 +23,27 @@
         margin: 5px;
         background-image: -webkit-linear-gradient(left top, pink 3%, red 22%, maroon 99%);
         cursor: pointer;
-        position: absolute;        
+        position: absolute;   
+        unselectable="on"
+        onselectstart="return false;"              
       }
-      .video-game-button:active, .start-btn:active {
+      .video-game-button:active {
         box-shadow: none;
       }        
     </style>
 </head>
 
 <body>
-  <div style="width:100%;height:50px;text-align: center; color:white;" class="ui">Info header</div>
-  <button style="top:0" id="A" class="video-game-button">A</button>
+  <!--div style="width:100%;height:50px;text-align: center; color:white;" class="ui">Info header</div-->
+
+  
+  onselectstart="return false;" 
+
+  
+
+  <button style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
+  unselectable="on"
+  onselectstart="return false;"  id="A" class="video-game-button">A</button>
   <button style="bottom:0" id="B" class="video-game-button">B</button>
   <button style="right:0" id="C" class="video-game-button">C</button>
   <div id="webgl-output">
