--- a/src/buttons.html
+++ b/src/buttons.html
@@ -22,10 +22,9 @@
         color: red;
         margin: 5px;
         background-image: -webkit-linear-gradient(left top, pink 3%, red 22%, maroon 99%);
+        background-image: linear-gradient(left top, pink 3%, red 22%, maroon 99%);
         cursor: pointer;
-        position: absolute;   
-        unselectable="on"
-        onselectstart="return false;"              
+        position: absolute;             
       }
       .video-game-button:active {
         box-shadow: none;
@@ -36,14 +35,8 @@
 <body>
   <!--div style="width:100%;height:50px;text-align: center; color:white;" class="ui">Info header</div-->
 
-  
-  onselectstart="return false;" 
-
-  
-
   <button style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
-  unselectable="on"
-  onselectstart="return false;"  id="A" class="video-game-button">A</button>
+  unselectable="on" onselectstart="return false;" id="A" class="video-game-button">A</button>
   <button style="bottom:0" id="B" class="video-game-button">B</button>
   <button style="right:0" id="C" class="video-game-button">C</button>
   <div id="webgl-output">
