--- a/src/buttons.html
+++ b/src/buttons.html
@@ -9,22 +9,20 @@
     <style>
       body {
         background-color: black;
-        font-size: 5pt;
       }
       .video-game-button {       
-        text-shadow: 1px 1px pink, -1px -1px maroon;
         line-height: 5em;
         width: 5em;
-        text-align: center;
         border-radius: 2.5em;
-        background-color: red;
-        box-shadow:  0 .2em maroon;
-        color: red;
+        box-shadow:  0 .14em rgb(40, 40, 40);
+        color: black;
         margin: 5px;
-        background-image: -webkit-linear-gradient(left top, pink 3%, red 22%, maroon 99%);
-        background-image: linear-gradient(left top, pink 3%, red 22%, maroon 99%);
+        text-shadow: 1px 1px rgb(128, 128, 128), -1px -1px rgb(0,0,255);        
+        background-image: linear-gradient(top, blue 3%, red 22%, maroon 99%);
+        background-image: -webkit-linear-gradient(top, rgb(66, 218, 245) 3%,rgb(117, 143, 255) 22%, rgb(5, 51, 247) 99%);        
         cursor: pointer;
         position: absolute;             
+        font-size: 20pt;        
       }
       .video-game-button:active {
         box-shadow: none;
@@ -35,10 +33,11 @@
 <body>
   <!--div style="width:100%;height:50px;text-align: center; color:white;" class="ui">Info header</div-->
 
-  <button style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
-  unselectable="on" onselectstart="return false;" id="A" class="video-game-button">A</button>
-  <button style="bottom:0" id="B" class="video-game-button">B</button>
-  <button style="right:0" id="C" class="video-game-button">C</button>
+  <button style="bottom:40px; right: 180px; user-select:none;" unselectable="on" onselectstart="return false;" 
+          "bottom:0" id="A" class="video-game-button">A</button>
+  <button style="bottom:40px; right: 20px; user-select:none;" unselectable="on" onselectstart="return false;" 
+          "bottom:0" id="B" class="video-game-button">B</button>          
+
   <div id="webgl-output">
     <script type="module" src="buttons.js"></script>
   </div>
