--- a/src/buttons.html
+++ b/src/buttons.html
@@ -11,9 +11,9 @@
         background-color: black;
       }
       .video-game-button {       
-        line-height: 5em;
-        width: 5em;
-        border-radius: 2.5em;
+        line-height: 3em;
+        width: 3em;
+        border-radius: 1em; /* 1.5 to be round */
         box-shadow:  0 .14em rgb(40, 40, 40);
         color: black;
         margin: 5px;
@@ -33,9 +33,9 @@
 <body>
   <!--div style="width:100%;height:50px;text-align: center; color:white;" class="ui">Info header</div-->
 
-  <button style="bottom:40px; right: 180px; user-select:none;" unselectable="on" onselectstart="return false;" 
+  <button style="bottom:20px; right: 120px; user-select:none;" unselectable="on" onselectstart="return false;" 
           "bottom:0" id="A" class="video-game-button">A</button>
-  <button style="bottom:40px; right: 20px; user-select:none;" unselectable="on" onselectstart="return false;" 
+  <button style="bottom:20px; right: 20px; user-select:none;" unselectable="on" onselectstart="return false;" 
           "bottom:0" id="B" class="video-game-button">B</button>          
 
   <div id="webgl-output">
