--- a/src/buttons.html
+++ b/src/buttons.html
@@ -8,41 +8,37 @@
 
     <style>
       body {
-        background-color: black;
+        background-color: transparent; 
       }
-
       .video-game-button {       
-        border-radius: 1em; /* 1.5 to be round */
-        line-height: 3em;
         width: 3em;
-
-        box-shadow:  0 .14em rgb(40, 40, 40);
-        color: black;
-        margin: 5px;
-        text-shadow: 1px 1px rgb(128, 128, 128), -1px -1px rgb(0,0,255);        
-        background-image: linear-gradient(top, blue 3%, red 22%, maroon 99%);
-        background-image: -webkit-linear-gradient(top, rgb(66, 218, 245) 3%,rgb(117, 143, 255) 22%, rgb(5, 51, 247) 99%);        
-        tap-highlight-color: rgba(0,0,0,0);
-        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        line-height: 3em;
+        border-radius: 1.5em; /* 1.5 to be round */
         cursor: pointer;
         position: absolute;             
-        font-size: 20pt;     
-        outline: none;
-        text-shadow: 1px 1px pink, -1px -1px maroon;
-  
-      }
-      
-      
+        font-size: 20pt;            
+        color: rgb(0, 0, 0);       
+        background-color: transparent;        
+        background-image:         linear-gradient(top, rgba(66, 218, 245, 0.5) 3%,rgba(117, 143, 255, 0.5) 22%, rgba(5, 51, 247, 0.5) 99%);
+        background-image: -webkit-linear-gradient(top, rgba(66, 218, 245, 0.5) 3%,rgba(117, 143, 255, 0.5) 22%, rgba(5, 51, 247, 0.5) 99%);
+        -webkit-tap-highlight-color: rgba(0,0,0,0);        
+        } 
+        .video-game-button:active {
+          background-image:         linear-gradient(top, rgba(66, 218, 245, 1) 3%,rgba(117, 143, 255, 1) 22%, rgba(5, 51, 247, 1) 99%);
+          background-image: -webkit-linear-gradient(top, rgba(66, 218, 245, 1) 3%,rgba(117, 143, 255, 1) 22%, rgba(5, 51, 247, 1) 99%);
+        }        
     </style>
 </head>
 
 <body>
-  <!--div style="width:100%;height:50px;text-align: center; color:white;" class="ui">Info header</div-->
-
   <button style="bottom:20px; right: 120px; user-select:none;" unselectable="on" onselectstart="return false;" 
           "bottom:0" id="A" class="video-game-button">A</button>
   <button style="bottom:20px; right: 20px; user-select:none;" unselectable="on" onselectstart="return false;" 
-          "bottom:0" id="B" class="video-game-button">B</button>          
+          "bottom:0" id="B" class="video-game-button">B</button>        
+
+  <button style="top:10px; right: 10px; width: 1emp; line-height: 1.4em; font-size: 10pt; background-color: #cccccc; background-image:none"
+          unselectable="on" onselectstart="return false;"   
+          "bottom:0" id="full" class="video-game-button">[  ]</button>          
 
   <div id="webgl-output">
     <script type="module" src="buttons.js"></script>
