--- a/src/buttons.html
+++ b/src/buttons.html
@@ -31,14 +31,14 @@
 </head>
 
 <body>
-  <button style="bottom:20px; right: 120px; user-select:none;" unselectable="on" onselectstart="return false;" 
-          "bottom:0" id="A" class="video-game-button">A</button>
-  <button style="bottom:20px; right: 20px; user-select:none;" unselectable="on" onselectstart="return false;" 
-          "bottom:0" id="B" class="video-game-button">B</button>        
+  <button style="bottom:20px; right: 120px; user-select:none;" 
+          unselectable="on" onselectstart="return false;" id="A" class="video-game-button">A</button>
+
+  <button style="bottom:20px; right: 20px; user-select:none;" 
+          unselectable="on" onselectstart="return false;" id="B" class="video-game-button">B</button>        
 
   <button style="top:10px; right: 10px; width: 1emp; line-height: 1.4em; font-size: 10pt; background-color: #cccccc; background-image:none"
-          unselectable="on" onselectstart="return false;"   
-          "bottom:0" id="full" class="video-game-button">[  ]</button>          
+          unselectable="on" onselectstart="return false;" id="full" class="video-game-button">[ ]</button>          
 
   <div id="webgl-output">
     <script type="module" src="buttons.js"></script>
