--- a/src/buttons.html
+++ b/src/buttons.html
@@ -10,12 +10,13 @@
       body {
         background-color: transparent; 
       }
+      
       .video-game-button {       
         width: 3em;
         line-height: 3em;
         border-radius: 1.5em; /* 1.5 to be round */
         cursor: pointer;
-        position: absolute;             
+        position: fixed;             
         font-size: 20pt;            
         color: rgb(0, 0, 0);       
         background-color: transparent;        
