--- a/html/exampleJoystickInfo.html
+++ b/html/exampleJoystickInfo.html
@@ -8,16 +8,23 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Virtual Joystick Example</h1>
+		<h1>Joystick Elements</h1>
 		<br>
 		<hr>
 
-		<p>In this example a virtual joystick is created to change the object position (left joystick) and scale (right joystick in Y axis).
+		<p>In this first example a virtual joystick is created to change the object position (left joystick) and scale (right joystick in Y axis).
 		This example uses de NippleJS interface. For further reference, check <a href="https://yoannmoi.net/nipplejs/" target="_blank">this link</a>.
 		</p>
 
 		<iframe src="../src/exampleJoystick.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/exampleJoystick.html" target="_blank">Open in a new tab</a>
+
+		<p>In this next example virtual buttons are added over the scene. 
+		   The example includes two buttons to rotate the object and the upper button that toggles fullscreen.
+		</p>
+	
+			<iframe src="../src/exampleButtons.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
+			<a href="../src/exampleButtons.html" target="_blank">Open in a new tab</a>
 
 	</body>
 </html>
