--- a/html/ammoVehicleInfo.html
+++ b/html/ammoVehicleInfo.html
@@ -23,5 +23,11 @@
 		<iframe src="../src/ammoVehicle.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/ammoVehicle.html" target="_blank">Open in a new tab</a>
 
+		<p>You can also test the same example on your mobile device using a virtual joystick available in the example bellow.
+		</p>		
+
+		<iframe src="../src/ammoVehicleJoystick.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
+		<a href="../src/ammoVehicleJoystick.html" target="_blank">Open in a new tab</a>
+
 	</body>
 </html>
