--- a/src/ammoVehicleJoystick.html
+++ b/src/ammoVehicleJoystick.html
@@ -4,7 +4,9 @@
   <title>Ammo - Raycast vehicle</title>
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../html/resources/default.css">
+  <link rel="stylesheet" href="../libs/other/buttons.css">  
   <meta name="viewport" content="width=device-width, initial-scale=1">  
+
   <style>
     body {
         font-family:Monospace; text-align:center;
@@ -26,30 +28,28 @@
       left: 0;
       display: block; 
       touch-action: manipulation;
-    }
-  
-    #joystickWrapper2 {
-      pointer-events: auto;
-      position: absolute;       
-      bottom: 0;
-      right: 0;
-      display: block; 
-      touch-action: manipulation;
-    }    
+    } 
   
   </style>    
 </head>
 
 <body>
   <div id="joystickWrapper1"></div>
-  <div id="joystickWrapper2"></div>
 
-  <div id="speedometer">0.0 km/h</div>
-  <div id="info">Ammo - Raycast vehicle<br>Press arrow keys to move.</div>  
+  <button style="bottom:20px; right: 120px;" 
+  id="A" class="video-game-button">A</button>
+
+  <button style="bottom:20px; right: 20px;" 
+  id="B" class="video-game-button">B</button>        
+
+  <button style="top:10px; right: 10px; width: 1emp; line-height: 1.4em; font-size: 10pt; background-color: #cccccc; background-image:none"
+  id="full" class="video-game-button">[ ]</button>  
+
+  <div id="speedometer">0.0 km/h</div> 
   <div id="webgl-output">
     <script src="../libs/other/ammo.wasm.js"></script>      
     <script src="../libs/other/nipplejs.js"></script>    
-    <script type="module" src="test.js"></script>
+    <script type="module" src="ammoVehicleJoystick.js"></script>
   </div>
 </body>
 </html>
