--- a/src/textureUVMapping.html
+++ b/src/textureUVMapping.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Geometries - Manual creation</title>
+  <title>Textures - UV Mapping</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -9,7 +9,7 @@
 
 <body>
   <div id="webgl-output">
-    <script type="module" src="geometriesManual2.js"></script>
+    <script type="module" src="textureUVMapping.js"></script>
   </div>
 </body>
 </html>
