Textures - UV Mapping added

--- a/html/textureUVMappingInfo.html
+++ b/html/textureUVMappingInfo.html
@@ -13,7 +13,7 @@
 		<hr>
 
 		<p>
-		In general, to use textures in Threejs you will use objects that already have UV coordinates (such as planes, cubes etc) 
+		In general, to use textures in Three.js you will use objects that already have UV coordinates (such as planes, cubes etc) 
 		or objects created in external programs (such as blender). But sometimes you may have to apply textures to a custom 
 		object and in this case, you will have to create the UV coordinates manually.
 		</p>
@@ -29,8 +29,8 @@
 		<h2>Setting UV Coordinates</h2>
 
 		<p>
-		In Figure 1 you can observe how UV coordinates were applied in our example and the following shows
-		how to add these coordinates in our code.		
+		In Figure 1 you can observe how UV coordinates were applied in our example and the following code shows
+		how to add these coordinates in our example.		
 		</p>
 
 		<figure>
