--- a/html/textureUVMappingInfo.html
+++ b/html/textureUVMappingInfo.html
@@ -29,8 +29,7 @@
 		<h2>Setting UV Coordinates</h2>
 
 		<p>
-		In Figure 1 you can observe how UV coordinates were applied in our example and the following code shows
-		how to add these coordinates in our example.		
+		In Figure 1 you can observe how UV coordinates were applied in our example and the following code shows how to add these coordinates.		
 		</p>
 
 		<figure>
