--- a/src/exampleLoadingScreenWithButton.html
+++ b/src/exampleLoadingScreenWithButton.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style id="compiled-css" type="text/css">
     html, body {
-   overflow: hidden;
-   margin: 0;
-   width: 100%;
-   height: 100%;
-  }
+      overflow: hidden;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
   #loading-screen {
+    --speed1: 2s;
+    --speed2: 3s;
+    --speed3: 1s;        
     position: absolute;
     z-index: 2;
     top: 0;
@@ -34,9 +37,8 @@
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #9370DB;
-    //-webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
+    border-top-color: #858585;
+    animation: spin var(--speed1) linear infinite;
   }
   #loader:before {
     content: "";
@@ -47,9 +49,8 @@
     bottom: 5px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #BA55D3;
-   // -webkit-animation: spin 3s linear infinite;
-    animation: spin 3s linear infinite;
+    border-top-color: #fafafa;
+    animation: spin var(--speed2) linear infinite;
   }
   #loader:after {
     content: "";
@@ -60,31 +61,14 @@
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #FF00FF;
-    //-webkit-animation: spin 1.5s linear infinite;
-    animation: spin 1.5s linear infinite;
+    border-top-color: #fafafa;
+    animation: spin var(--speed3) linear infinite;
   }
-   @-webkit-keyframes spin {
-    0%   {
-      /* -webkit-transform: rotate(0deg);
-      -ms-transform: rotate(0deg); */
-      transform: rotate(0deg);
-    }
-    100% {
-      /* -webkit-transform: rotate(360deg);
-      -ms-transform: rotate(360deg); */
-      transform: rotate(360deg);
-    }
-  } 
   @keyframes spin {
     0%   {
-      /* -webkit-transform: rotate(0deg);
-      -ms-transform: rotate(0deg); */
       transform: rotate(0deg);
     }
     100% {
-      /* -webkit-transform: rotate(360deg);
-      -ms-transform: rotate(360deg); */
       transform: rotate(360deg);
     }
   }
