Loading screen with buttons - in development

--- a/src/exampleLoadingScreenWithButton.html
+++ b/src/exampleLoadingScreenWithButton.html
@@ -3,7 +3,7 @@
 <head>
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style id="compiled-css" type="text/css">
+  <style type="text/css">
     html, body {
       overflow: hidden;
       margin: 0;
@@ -36,32 +36,32 @@
     height: 150px;
     margin: -75px 0 0 -75px;
     border-radius: 50%;
-    border: 3px solid transparent;
-    border-top-color: #858585;
+    border: 5px solid transparent;
+    border-top-color: #e6e9ff;
     animation: spin var(--speed1) linear infinite;
   }
   #loader:before {
     content: "";
     position: absolute;
-    top: 5px;
-    left: 5px;
-    right: 5px;
-    bottom: 5px;
+    top: 12px;
+    left: 12px;
+    right: 12px;
+    bottom: 12px;
     border-radius: 50%;
-    border: 3px solid transparent;
-    border-top-color: #fafafa;
+    border: 5px solid transparent;
+    border-top-color: #8f8eff;
     animation: spin var(--speed2) linear infinite;
   }
   #loader:after {
     content: "";
     position: absolute;
-    top: 15px;
-    left: 15px;
-    right: 15px;
-    bottom: 15px;
-    border-radius: 50%;
-    border: 3px solid transparent;
-    border-top-color: #fafafa;
+    top: 30px;
+    left: 30px;
+    right: 30px;
+    bottom: 30px;
+    border-radius: 80%;
+    border: 5px solid transparent;
+    border-top-color: #5947ff;
     animation: spin var(--speed3) linear infinite;
   }
   @keyframes spin {
