Texture Advanced - Cube mapping added

--- a/html/textureAdvancedCubeMappingInfo.html
+++ b/html/textureAdvancedCubeMappingInfo.html
@@ -8,9 +8,16 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Group Geometry</h1>
+		<h1>Environment Mapping</h1>
 		<br>
 		<hr>
+
+		<p>
+		Environment mapping is a scheme that improves on the mapping techniques of chrome and refraction mapping.
+		It is useful because of the fact that in a reflective environment, ray tracing can be very expensive. 
+		Environment mapping gives these reflections more cheaply with little loss of accuracy.
+		There are many ways to create environment maps and in this example it is obtained through the use of cube maps.
+		</p>
 
 		<p>
 		Cube mapping is a method of environment mapping that uses the six faces of a cube as the map shape. 
@@ -25,7 +32,7 @@
 		<a href="https://threejs.org/docs/index.html?q=CubeTextureLoader#api/en/loaders/CubeTextureLoader" target="_blank">here</a>).
 		</p>
 
-		A large set of free cube maps for experimentation can be found <a href="http://www.humus.name/index.php?page=Textures" 
+		A large set of <b>free cube maps</b> for experimentation can be found <a href="http://www.humus.name/index.php?page=Textures" 
 		target="_blank">here</a>.
 		<p></p>
 
