Texture Advanced - Equirectangular map

--- a/html/textureAdvancedCubeMap.html
+++ b/html/textureAdvancedCubeMap.html
@@ -8,7 +8,7 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Environment Mapping</h1>
+		<h1>Environment Mapping - Cube Map</h1>
 		<br>
 		<hr>
 
@@ -31,13 +31,14 @@
 		In Threejs you can use the cube mapping technique through the use of a Cube Texture Loader (details 
 		<a href="https://threejs.org/docs/index.html?q=CubeTextureLoader#api/en/loaders/CubeTextureLoader" target="_blank">here</a>).
 		</p>
-
+		
+		<p>
 		A large set of <b>free cube maps</b> for experimentation can be found <a href="http://www.humus.name/index.php?page=Textures" 
 		target="_blank">here</a>.
-		<p></p>
+		</p>
 
-		<iframe src="../src/textureAdvancedCubeMapping.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
-		<a href="../src/textureAdvancedCubeMapping.html" target="_blank">Open in a new tab</a>
+		<iframe src="../src/textureAdvancedCubeMap.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
+		<a href="../src/textureAdvancedCubeMap.html" target="_blank">Open in a new tab</a>
 
 	</body>
 </html>
