--- a/src/textureAdvancedCubeMap.html
+++ b/src/textureAdvancedCubeMap.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="webgl-output">
-    <script type="module" src="textureAdvancedCubeMapping.js"></script>
+    <script type="module" src="textureAdvancedCubeMap.js"></script>
   </div>
 </body>
 </html>
