Three revision UPDATE

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -21,8 +21,8 @@
 		<p>Additionally you will find examples of more advanced techniques such as raytracing, virtual reality and augmented reality.</p>
 		<hr>
 
-		<p style="color:lightgray">
-		Current Three.js revision: <b>r</b><b id="version"></b>
+		<p style="color:darkgray">
+		Three.js revision used: <b>r</b><b id="version"></b>
 		</p>
 		
 		<script type="module">
