--- a/src/exampleShader.html
+++ b/src/exampleShader.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Basic Scene</title>
+    <title>Shader Example</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
 
 <body>
-  <div id="webgl-output">
+    <div id="webgl-output">    
     <script type="importmap">
       {"imports": {"three": "../build/three.module.js"}}
     </script>    
-    <script type="module" src="basicScene.js"></script>
+    <script type="module" src="exampleShader.js"></script>
   </div>
 </body>
-
 </html>
