Water shader example added

--- a/src/exampleShaderWater.html
+++ b/src/exampleShaderWater.html
@@ -12,7 +12,7 @@
     <script type="importmap">
       {"imports": {"three": "../build/three.module.js"}}
     </script>    
-    <script type="module" src="exampleShader.js"></script>
+    <script type="module" src="exampleShaderWater.js"></script>
   </div>
 </body>
 </html>
