--- a/src/AR_Basic.html
+++ b/src/AR_Basic.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
+  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
+  <script type="importmap"> 
+    {"imports": {"three": "../build/three.module.js"}} 
+  </script> 
+
   <div id="webgl-output">    
-    <script type="importmap">
-      {"imports": {"three": "../build/three.module.js"}}
-    </script>    
     <script type="module" src="AR_Basic.js"></script>
   </div>
 </body>
