--- a/src/ammoVehicleJoystick.html
+++ b/src/ammoVehicleJoystick.html
@@ -30,10 +30,16 @@
       touch-action: manipulation;
     } 
   
-  </style>    
+  </style>   
 </head>
 
 <body>
+  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
+  <script type="importmap"> 
+    {"imports": {"three": "../build/three.module.js"}} 
+  </script>  
+
   <div id="joystickWrapper1"></div>
 
   <button style="bottom:20px; right: 120px;" 
@@ -46,10 +52,7 @@
   id="full" class="video-game-button">[ ]</button>  
 
   <div id="speedometer">0.0 km/h</div> 
-  <div id="webgl-output">    
-    <script type="importmap">
-      {"imports": {"three": "../build/three.module.js"}}
-    </script>    
+  <div id="webgl-output">     
     <script src="../libs/other/ammo.wasm.js"></script>      
     <script src="../libs/other/nipplejs.js"></script>    
     <script type="module" src="ammoVehicleJoystick.js"></script>
