--- a/src/exampleButtons.html
+++ b/src/exampleButtons.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
+  <script type="importmap"> 
+    {"imports": {"three": "../build/three.module.js"}} 
+  </script> 
+
   <button style="bottom:20px; right: 120px;" 
           id="A" class="video-game-button">A</button>
 
