--- a/src/exampleJoystick.html
+++ b/src/exampleJoystick.html
@@ -28,10 +28,13 @@
 </head>
 
 <body>
+  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
+  <script type="importmap"> 
+    {"imports": {"three": "../build/three.module.js"}} 
+  </script> 
+
   <div id="webgl-output">    
-    <script type="importmap">
-      {"imports": {"three": "../build/three.module.js"}}
-    </script>    
   <div id="joystickWrapper1"></div>
   <div id="joystickWrapper2"></div>
 
