--- a/src/exampleLoadingScreen.html
+++ b/src/exampleLoadingScreen.html
@@ -7,13 +7,16 @@
 </head>
 
 <body>
+  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
+  <script type="importmap"> 
+    {"imports": {"three": "../build/three.module.js"}} 
+  </script> 
+    
   <section id="loading-screen">
     <div id="loader"></div> 
   </section>
-  <div id="webgl-output">    
-    <script type="importmap">
-      {"imports": {"three": "../build/three.module.js"}}
-    </script>    
+  <div id="webgl-output">       
     <script type="module" src="exampleLoadingScreen.js"></script>
   </div>
 </body>
