--- a/src/raytracingExample2.html
+++ b/src/raytracingExample2.html
@@ -9,10 +9,13 @@
 </head>
 
 <body>
-  <div id="webgl-output">    
-    <script type="importmap">
-      {"imports": {"three": "../libs/other/three.module.r82.js"}}
-    </script> 
+  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
+  <script type="importmap"> 
+    {"imports": {"three": "../libs/other/three.module.r82.js"}} 
+  </script> 
+
+  <div id="webgl-output">        
     <script type="module" src="raytracingExample2.js"></script>
   </div>
 </body>
