--- a/src/shadowUpdate.html
+++ b/src/shadowUpdate.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
-  <div id="container"></div>  
-  <div id="webgl-output">    
-    <script type="importmap">
-      {"imports": {"three": "../build/three.module.js"}}
-    </script>    
+  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
+  <script type="importmap"> 
+    {"imports": {"three": "../build/three.module.js"}} 
+  </script>
+
+  <div id="container"></div>
+  <div id="webgl-output">          
     <script type="module" src="shadowUpdate.js"></script>
   </div>
 </body>
