--- a/src/exampleJoystick.html
+++ b/src/exampleJoystick.html
@@ -34,11 +34,12 @@
     {"imports": {"three": "../build/three.module.js"}} 
   </script> 
 
-  <div id="webgl-output">    
   <div id="joystickWrapper1"></div>
   <div id="joystickWrapper2"></div>
-
   <script src="../libs/other/nipplejs.js"></script>        
-  <script type="module" src="exampleJoystick.js"></script>
-</body>
+
+  <div id="webgl-output">    
+    <script type="module" src="exampleJoystick.js"></script>
+  </div>
+</body>  
 </html>
