Multitex changed to multicolor

--- a/src/exampleMulticolorCube.html
+++ b/src/exampleMulticolorCube.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Multi color cube</title>
+    <title>Multicolor Cube</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">           
-    <script type="module" src="exampleMultiColorCube.js"></script>
+    <script type="module" src="exampleMulticolorCube.js"></script>
   </div>
 </body>
 </html>
