--- a/html/welcome.html
+++ b/html/welcome.html
@@ -19,6 +19,9 @@
 		<p>You will find in this page projects regarding geometric models, 3D object modeling, scene and virtual camera concepts and topics about lighting and texture usage. </p>
 
 		<p>Additionally you will find examples of more advanced techniques such as raytracing, virtual reality and augmented reality.</p>
+
+      <p>Our course notes will be available (in portuguese) <a href="https://sites.google.com/site/computacaograficaufjf/aulas" target="_blank">here</a>.</p>
+      
 		<hr>
 
 		<p style="color:darkgray">
