--- a/works/basicScene.html
+++ b/works/basicScene.html
@@ -2,16 +2,20 @@
 <html>
 <head>
     <title>Basic Scene</title>
+
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">  
-</head>
+  </head>
 
 <body>
-  <div id="webgl-output">
-    <script type="importmap">
-      {"imports": {"three": "../build/three.module.js"}}
-    </script>    
+  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
+  <script type="importmap"> 
+    {"imports": {"three": "../build/three.module.js"}} 
+  </script>  
+
+  <div id="webgl-output">     
     <script type="module" src="basicScene.js"></script>
   </div>
 </body>
