--- a/src/geometricTransformation1.html
+++ b/src/geometricTransformation1.html
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">        
-    <script type="module" src="geometricTransformation.js"></script>
+    <script type="module" src="geometricTransformation1.js"></script>
   </div>
 </body>
 </html>
