changing folder names

--- a/exercises/introExercise01.html
+++ b/exercises/introExercise01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Basic Scene</title>
+    <title>Intro - Ex01</title>
 
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../html/resources/default.css">
@@ -16,7 +16,7 @@
   </script>  
 
   <div id="webgl-output">     
-    <script type="module" src="basicScene.js"></script>
+    <script type="module" src="introExercise01.js"></script>
   </div>
 </body>
 
