--- a/examples/materialsAndShading.html
+++ b/examples/materialsAndShading.html
@@ -15,7 +15,7 @@
   </script> 
 
   <div id="webgl-output">        
-    <script type="module" src="lightingMaterials.js"></script>
+    <script type="module" src="materialsAndShading.js"></script>
   </div>
 </body>
 </html>
